// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepRemuneration /> should render multiple inputs 1`] = `
.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #ff7067;
  font-weight: 400;
  font-size: 1.6rem;
  line-height: 1.625;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
}

.c10:focus,
.c10:hover,
.c10:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c12 {
  height: 1.4rem;
  margin-left: 0.4rem;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c9:hover .c12 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.8rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c1 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
  font-weight: 700;
}

.c7 {
  width: 10em;
  padding: 1rem 0.4rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #bbcadf;
  border-color: #bbcadf;
  border-radius: 0.6rem;
  padding-right: 1.6rem;
  text-align: right;
}

.c7::-webkit-outer-spin-button,
.c7::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c6 {
  position: relative;
  display: inline-block;
  margin-right: 1.6rem;
}

.c8 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #4d73b8;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c5 {
  margin-right: 1rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.4rem;
}

.c11 {
  margin-right: 2rem;
  font-size: 1.4rem;
}

.c13 {
  margin: 2rem 0;
}

.c14 {
  font-size: 1.4rem;
  font-style: italic;
}

<div>
  <p
    class="c0"
  >
    Sélectionnez la manière dont vous souhaitez indiquer la rémunération ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </p>
  <div
    class="c2"
  >
    <label
      class="c3"
    >
      <input
        name="typeRemuneration"
        type="radio"
        value="total"
      />
      <span>
        En indiquant le 
        <strong>
          montant total
        </strong>
         des rémunérations.
      </span>
    </label>
    <label
      class="c3"
    >
      <input
        checked=""
        name="typeRemuneration"
        type="radio"
        value="mensuel"
      />
      <span>
        En indiquant le 
        <strong>
          salaire mensuel
        </strong>
         pour chaque mois.
      </span>
    </label>
  </div>
  <p>
    Indiquez les salaires mensuels bruts perçus pendant le contrat *
  </p>
  <div
    class="c4"
  >
    <label
      class="c5"
      for="2"
    >
      Montant :
    </label>
    <div
      class="c6"
    >
      <input
        class="c7"
        id="2"
        name="salaires[0].salaire"
        size="10"
        type="number"
        value="2000"
      />
      <span
        aria-hidden="true"
        class="c8"
      >
        €
      </span>
    </div>
    <button
      class="c9 c10 c11"
      type="button"
    >
      Supprimer
      <svg
        class="c12"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="5"
          x2="19"
          y1="12"
          y2="12"
        />
        <polyline
          points="12 5 19 12 12 19"
        />
      </svg>
    </button>
  </div>
  <div
    class="c4"
  >
    <label
      class="c5"
      for="4"
    >
      Montant :
    </label>
    <div
      class="c6"
    >
      <input
        class="c7"
        id="4"
        name="salaires[1].salaire"
        size="10"
        type="number"
        value="1500"
      />
      <span
        aria-hidden="true"
        class="c8"
      >
        €
      </span>
    </div>
    <button
      class="c9 c10 c11"
      type="button"
    >
      Supprimer
      <svg
        class="c12"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="5"
          x2="19"
          y1="12"
          y2="12"
        />
        <polyline
          points="12 5 19 12 12 19"
        />
      </svg>
    </button>
  </div>
  <button
    class="c9 c10 c13"
    type="button"
  >
    Ajouter un salaire
    <svg
      class="c12"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="5"
        x2="19"
        y1="12"
        y2="12"
      />
      <polyline
        points="12 5 19 12 12 19"
      />
    </svg>
  </button>
  <p
    class="c14"
  >
    * Majorations, indemnités, primes et accessoires compris sauf les remboursements de frais et l’indemnité de congés payés.
  </p>
</div>
`;

exports[`<StepRemuneration /> should render one input 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.8rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c4 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c1 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
  font-weight: 700;
}

.c6 {
  width: 10em;
  padding: 1rem 0.4rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #bbcadf;
  border-color: #bbcadf;
  border-radius: 0.6rem;
  padding-right: 1.6rem;
  text-align: right;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c5 {
  position: relative;
  display: inline-block;
  margin-right: 1.6rem;
}

.c7 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #4d73b8;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c8 {
  font-size: 1.4rem;
  font-style: italic;
}

<div>
  <p
    class="c0"
  >
    Sélectionnez la manière dont vous souhaitez indiquer la rémunération ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </p>
  <div
    class="c2"
  >
    <label
      class="c3"
    >
      <input
        checked=""
        name="typeRemuneration"
        type="radio"
        value="total"
      />
      <span>
        En indiquant le 
        <strong>
          montant total
        </strong>
         des rémunérations.
      </span>
    </label>
    <label
      class="c3"
    >
      <input
        name="typeRemuneration"
        type="radio"
        value="mensuel"
      />
      <span>
        En indiquant le 
        <strong>
          salaire mensuel
        </strong>
         pour chaque mois.
      </span>
    </label>
  </div>
  <label
    class="c4"
    for="currency-1"
  >
    Indiquez la rémunération totale brute perçue pendant le contrat
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </label>
  <div
    class="c5"
  >
    <input
      class="c6"
      id="currency-1"
      name="salaire"
      size="10"
      type="number"
      value="3000"
    />
    <span
      aria-hidden="true"
      class="c7"
    >
      €
    </span>
  </div>
  <p
    class="c8"
  >
    * Majorations, indemnités, primes et accessoires compris sauf les remboursements de frais et l’indemnité de congés payés.
  </p>
</div>
`;
